src/styles/Navbar.css
/* .settings:hover {
    scale: 20;
} */

.settings {
    transform: rotate(0);
    transition: scale .1s, transform .2s;
    
}

.settings:hover {
    transform: rotate(90deg);
    scale: 1.05;
}

.profile-picture {
    cursor: pointer;
    transition: scale 0.2s;
}

@media screen and (max-width: 500px) {    .nav-profile-picture { display: none; } }

@media screen and (max-width: 500px) 
{    
    .nav-form { margin-right: 0px !important; } 
    .crabnet-logo {
        margin-right: 10px !important;
    }
    .chat-room-icon {
        margin: 0px 0px 0px 4px !important;
        scale: .95;
    }
   

    
    .nav-wrapper {
        padding: 5px ;
    }
    

}
.profile-picture:hover {
    scale: 1.05;
    
}

.nav-wrapper {
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: 10;
    padding: 6px;
}

.navbar-container {
    display: flex;
    width: 100%;
    justify-content: space-between;
    z-index: 10;
}

.crabnet-logo {
    cursor: pointer;
}

.navbar-controls {
    
    display: flex;
    align-items: center;
    
}

.search-group {
    display: flex;
    align-items: center;
}

.search-group input:focus::placeholder {
    color: transparent;
  }

  .search-group input:focus + .search-icon {
    color: transparent;
  }

.search-icon {
    position: relative;
    left: 23px;
    z-index: 1;
    
    margin: 0px;
    padding: 0px;
    color: #676b74cd;
    font-size: .9rem;
}

.brand-container {
    
    display: flex;
    justify-content: center;
    align-items: center;
}

.chat-room-icon {
    margin: 0px 20px 0px 0px;
    font-size: 1.52rem;
    color: rgba(0, 105, 217, 0.688)  ;
    /* border: 1px solid rgba(125, 125, 125, 0.5); */
    border-radius: 100px;
    padding: 5px;
    cursor: pointer;
    transition: scale .2s;
}

.chat-room-icon:hover {
    scale: 1.08;
    
        
}

